--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-node_modules
+# Dependencias
+node_modules/
+/.pnp
+.pnp.js
+
+# Environment Variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+/coverage
+
+# Producción
+/build
+/dist
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+
+# Archivos temporales
+.tmp/
+.temp/
