creat sa pantalla de tiktok_like_screen

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "description": "",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
